examples/programs/invalid/stack_underflow.sst
.version 1
; Invalid: pop on empty stack

pop
halt
